Fixed the alignment of description in center in mobile view

--- a/nanoheal-test/src/components/repocard.scss
+++ b/nanoheal-test/src/components/repocard.scss
@@ -117,14 +117,12 @@
       }
       .repo-description {
         font-size: 1rem;
+        text-align: center;
       }
       .repo-username {
         font-size: 0.7rem;
       }
-      .repo-description {
-        
-        text-align: center;
-      }
+      
     }
   }
 }
